# currency-converter-gui

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml
.github/workflows/: test.yaml
src/converter_gui/: app.py  config.py  main_window.py
src/converter_gui/messaging/: converter_client.py
tests/unit/: test_config.py  test_main_window.py
tests/unit/messaging/: test_converter_client.py
