[tool.poetry]
name = "currency-converter-gui"
version = "0.1.0"
description = "User interface for interacting with the currency converter REST API"
authors = ["WilliamViolet <55817129+WilliamViolet@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "converter_gui", from = "src"}]

[tool.poetry.scripts]
converter-gui = "converter_gui:app.main"

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.15.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.5"
autopep8 = "^2.0.4"
pytest = "^7.4.4"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
